<resources>
    <string name="app_name">Assignment2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginWelcome">Welcome</string>
    <string name="loginUsername">Your first name</string>
    <string name="loginPassword">Password</string>
    <string name="loginButton">Login</string>
    <string name="dashboardWelcome">Dashboard</string>
    <string name="itemButtonText">See Details</string>
    <string name="detailsHeader">Details</string>
    <string name="detailsImageContentDesc">Placeholder Image</string>
    <string name="detailsCountry">Country</string>
    <string name="detailsBestSeason">Best Season</string>
    <string name="detailsPopularAttraction">Popular Attraction</string>
    <string name="detailsDescription">Description</string>
    <string name="detailsDestination">Destination</string>
</resources>