<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="@dimen/regularPadding"
    android:paddingEnd="@dimen/regularPadding"
    android:paddingTop="@dimen/regularPadding"
    android:paddingBottom="0dp"
    android:background="@color/teal"
    tools:context=".LoginFragment">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginWelcomeText"
        android:text="@string/loginWelcome"
        android:textSize="32sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:padding="@dimen/regularPadding"
        android:background="@drawable/edittext_border"
        android:backgroundTint="@color/white">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginUsername"
            android:paddingTop="@dimen/default_inner_top_padding"
            app:startIconDrawable="@drawable/rounded_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginPassword"
            android:paddingTop="@dimen/default_inner_top_padding"
            app:startIconDrawable="@drawable/rounded_key_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingStart="48dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginButton"
            android:textSize="22sp"
            android:layout_marginTop="@dimen/default_inner_top_padding"
            android:layout_gravity="right"/>

    </LinearLayout>

</LinearLayout>